# hylo-happ

./: Cargo.toml  README.md  default.nix  package-lock.json  package.json
dna/coordinator_zomes/comments/: Cargo.toml
dna/coordinator_zomes/comments/src/: comment.rs  lib.rs
dna/coordinator_zomes/groups/: Cargo.toml
dna/coordinator_zomes/groups/src/: group.rs
dna/coordinator_zomes/people/: Cargo.toml
dna/coordinator_zomes/people/src/: lib.rs  person.rs
dna/coordinator_zomes/posts/: Cargo.toml
dna/coordinator_zomes/posts/src/: post.rs
dna/integrity_zomes/comments/: Cargo.toml
dna/integrity_zomes/comments/src/: lib.rs
dna/integrity_zomes/comments/src/comment/: definition.rs
dna/integrity_zomes/groups/: Cargo.toml
dna/integrity_zomes/groups/src/: lib.rs
dna/integrity_zomes/groups/src/group/: definition.rs
dna/integrity_zomes/people/: Cargo.toml
dna/integrity_zomes/people/src/: lib.rs
dna/integrity_zomes/people/src/person/: definition.rs
dna/integrity_zomes/posts/: Cargo.toml
dna/integrity_zomes/posts/src/: lib.rs
dna/integrity_zomes/posts/src/post/: definition.rs
dna/workdir/: dna.yaml
lib/hylo_utils/: Cargo.toml
lib/hylo_utils/src/: hylo_utils.rs  lib.rs
nix/: sources.json
tests/: package.json
tests/src/: index.ts  utils.ts
tests/src/hylo/comments/: comment.ts
tests/src/hylo/groups/: group.ts
tests/src/hylo/people/: person.ts
tests/src/hylo/posts/: post.ts
workdir/: happ.yaml  web-happ.yaml
