[package]
edition = "2021"
name = "comments"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "comments"

[dependencies]
serde = "1"
derive_more = "0"
comments_integrity = { path = "../../integrity_zomes/comments" }
hylo_utils = { path = "../../../lib/hylo_utils" }
hdk = { version = "0.0.140", features = ["encoding"] }
